security: Add server-side admin auth + config cleanup
- Add Bearer token middleware to protect all /api/admin/* endpoints
- Standardize port to 3001 across Dockerfile, docker-compose, docs
- Update to Node 22 Alpine for security patches
- Delete orphaned dev.db at project root
- Add adminFetch helper for authenticated API calls
- Fix TypeScript type for optional country field
- Add deep-app-audit.md with full system analysis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3001
-      # DATABASE_URL is set in Dockerfile to /app/data/labor.db
+      # DATABASE_URL is set in Dockerfile to /app/data/dev.db
     volumes:
       # Map the named volume to the data directory
       - labor_data:/app/data
